--- a/crystal_client_templates/partial_model_generic.mustache
+++ b/crystal_client_templates/partial_model_generic.mustache
@@ -1,60 +1,23 @@
   {{#description}}
   # {{{.}}}
   {{/description}}
-  @[JSON::Serializable::Options(emit_nulls: true)]
   class {{classname}}
     include JSON::Serializable
     include JSON::Serializable::Unmapped
+    include OpenApi::Json
 
     {{#hasRequired}}
     # Required properties
     {{/hasRequired}}
     {{#requiredVars}}
-
-    {{#description}}
-    # {{{.}}}
-    {{/description}}
-    @[JSON::Field(key: "{{{baseName}}}", type: {{^isEnum}}{{#allowableValues}}{{moduleName}}::{{/allowableValues}}{{/isEnum}}{{{dataType}}}{{#isNullable}}{{^anyOf}}?{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}{{#-first}}?{{/-first}}{{/anyOf}}{{/isNullable}}{{#isDate}}, converter: Time::ISO8601DateConverter{{/isDate}}{{#isDateTime}}, converter: Time::RFC3339Converter{{/isDateTime}}{{#defaultValue}}, default: {{{defaultValue}}}{{/defaultValue}}{{#isNullable}}{{^anyOf}}, presence: true, ignore_serialize: {{{name}}}.nil? && !{{{name}}}_present?{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}{{#-first}}, presence: true, ignore_serialize: {{{name}}}.nil? && !{{{name}}}_present?{{/-first}}{{/anyOf}}{{/isNullable}})]
-    {{#isEnum}}getter{{/isEnum}}{{^isEnum}}{{^allowableValues}}{{#hasValidation}}getter{{/hasValidation}}{{^hasValidation}}property{{/hasValidation}}{{/allowableValues}}{{#allowableValues}}getter{{/allowableValues}}{{/isEnum}} {{{name}}} : {{^isEnum}}{{#allowableValues}}{{moduleName}}::{{/allowableValues}}{{/isEnum}}{{{dataType}}}{{#isNullable}}{{^anyOf}}?{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}{{#-first}}?{{/-first}}{{/anyOf}}{{/isNullable}}{{#defaultValue}}{{^isEnum}}{{#allowableValues}} = {{moduleName}}::{{dataType}}.new({{{defaultValue}}}){{/allowableValues}}{{^allowableValues}} = {{{defaultValue}}}{{/allowableValues}}{{/isEnum}}{{#isEnum}} = {{{defaultValue}}}{{/isEnum}}{{/defaultValue}}
-    {{#isNullable}}
-    {{^anyOf}}
-
-    @[JSON::Field(ignore: true)]
-    property? {{{name}}}_present : Bool = false
-    {{/anyOf}}
-    {{/isNullable}}
-    {{^isNullable}}
-    {{#anyOf}}
-    {{#-first}}
-
-    @[JSON::Field(ignore: true)]
-    property? {{{name}}}_present : Bool = false
-    {{/-first}}
-    {{/anyOf}}
-    {{/isNullable}}
-    {{#isEnum}}
-
-    {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}} = EnumValidator.new("{{{name}}}", "{{{dataType}}}", [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}])
-    {{/isEnum}}
+{{>partial_model_generic_property}}
     {{/requiredVars}}
     {{#hasOptional}}
 
     # Optional properties
     {{/hasOptional}}
     {{#optionalVars}}
-
-    {{#description}}
-    # {{{.}}}
-    {{/description}}
-    @[JSON::Field(key: "{{{baseName}}}", type: {{^isEnum}}{{#allowableValues}}{{moduleName}}::{{/allowableValues}}{{/isEnum}}{{{dataType}}}?{{#isDate}}, converter: Time::ISO8601DateConverter{{/isDate}}{{#isDateTime}}, converter: Time::RFC3339Converter{{/isDateTime}}{{#defaultValue}}, default: {{{defaultValue}}}{{/defaultValue}}, presence: true, ignore_serialize: {{{name}}}.nil? && !{{{name}}}_present?)]
-    {{#isEnum}}getter{{/isEnum}}{{^isEnum}}{{^allowableValues}}{{#hasValidation}}getter{{/hasValidation}}{{^hasValidation}}property{{/hasValidation}}{{/allowableValues}}{{#allowableValues}}getter{{/allowableValues}}{{/isEnum}} {{{name}}} : {{^isEnum}}{{#allowableValues}}{{moduleName}}::{{/allowableValues}}{{/isEnum}}{{{dataType}}}?{{#defaultValue}}{{^isEnum}}{{#allowableValues}} = {{moduleName}}::{{dataType}}.new({{{defaultValue}}}){{/allowableValues}}{{^allowableValues}} = {{{defaultValue}}}{{/allowableValues}}{{/isEnum}}{{#isEnum}} = {{{defaultValue}}}{{/isEnum}}{{/defaultValue}}
-
-    @[JSON::Field(ignore: true)]
-    property? {{{name}}}_present : Bool = false
-    {{#isEnum}}
-
-    {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}} = EnumValidator.new("{{{name}}}", "{{#isContainer}}{{#items}}{{{dataType}}}{{/items}}{{/isContainer}}{{^isContainer}}{{{dataType}}}{{/isContainer}}", [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}])
-    {{/isEnum}}
+{{>partial_model_generic_property}}
     {{/optionalVars}}
     {{#anyOf}}
     {{#-first}}
@@ -100,13 +63,13 @@
       # Required properties
       {{/hasRequired}}
       {{#requiredVars}}
-      @{{{name}}} : {{^isEnum}}{{#allowableValues}}{{moduleName}}::{{/allowableValues}}{{/isEnum}}{{{dataType}}}{{#isNullable}}{{^anyOf}}?{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}{{#-first}}?{{/-first}}{{/anyOf}}{{/isNullable}}{{#defaultValue}}{{^isEnum}}{{#allowableValues}} = {{moduleName}}::{{dataType}}.new({{{defaultValue}}}){{/allowableValues}}{{^allowableValues}} = {{{defaultValue}}}{{/allowableValues}}{{/isEnum}}{{#isEnum}} = {{{defaultValue}}}{{/isEnum}}{{/defaultValue}}{{^defaultValue}}{{#anyOf}}{{#-first}} = nil{{/-first}}{{/anyOf}}{{/defaultValue}}{{^-last}}, {{/-last}}{{#-last}}{{#hasOptional}},{{/hasOptional}}{{/-last}}
+      @{{{name}}} : {{>partial_model_generic_property_data_type}} = {{>partial_model_generic_property_default_value}}{{^-last}}, {{/-last}}{{#-last}}{{#hasOptional}},{{/hasOptional}}{{/-last}}
       {{/requiredVars}}
       {{#hasOptional}}
       # Optional properties
       {{/hasOptional}}
       {{#optionalVars}}
-      @{{{name}}} : {{^isEnum}}{{#allowableValues}}{{moduleName}}::{{/allowableValues}}{{/isEnum}}{{{dataType}}}?{{^defaultValue}} = nil{{/defaultValue}}{{#defaultValue}}{{^isEnum}}{{#allowableValues}} = {{moduleName}}::{{dataType}}.new({{{defaultValue}}}){{/allowableValues}}{{^allowableValues}} = {{{defaultValue}}}{{/allowableValues}}{{/isEnum}}{{#isEnum}} = {{{defaultValue}}}{{/isEnum}}{{/defaultValue}}{{^-last}},{{/-last}}
+      @{{{name}}} : {{>partial_model_generic_property_data_type}} = {{>partial_model_generic_property_default_value}}{{^-last}},{{/-last}}
       {{/optionalVars}}
     )
     end
@@ -115,14 +78,18 @@
     # @return Array for valid properties with the reasons
     def list_invalid_properties
       invalid_properties = Array(String).new
+      {{^anyOf}}
 {{#requiredVars}}{{>partial_model_list_invalid_properties}}{{/requiredVars}}{{#optionalVars}}{{>partial_model_list_invalid_properties}}{{/optionalVars}}
+      {{/anyOf}}
       invalid_properties
     end
 
     # Check to see if the all the properties in the model are valid
     # @return true if the model is valid
     def valid?
+      {{^anyOf}}
 {{#requiredVars}}{{>partial_model_valid}}{{/requiredVars}}{{#optionalVars}}{{>partial_model_valid}}{{/optionalVars}}
+      {{/anyOf}}
       {{#anyOf}}
       {{#-first}}
       _any_of_found = false
@@ -142,7 +109,9 @@
       {{/anyOf}}
       true
     end
+    {{^anyOf}}
 {{#requiredVars}}{{>partial_model_setter}}{{/requiredVars}}{{#optionalVars}}{{>partial_model_setter}}{{/optionalVars}}
+    {{/anyOf}}
     # @see the `==` method
     # @param [Object] Object to be compared
     def eql?(o)
@@ -153,5 +122,5 @@
     # #== @return [Bool]
     # #hash calculates hash code according to all attributes.
     # #hash @return [UInt64] Hash code
-    def_equals_and_hash({{#requiredVars}}@{{{name}}}{{#isNullable}}{{^anyOf}}, @{{{name}}}_present{{/anyOf}}{{/isNullable}}{{^isNullable}}{{#anyOf}}{{#-first}}, @{{{name}}}_present{{/-first}}{{/anyOf}}{{/isNullable}}{{^-last}}, {{/-last}}{{/requiredVars}}{{#hasRequired}}{{#hasOptional}}, {{/hasOptional}}{{/hasRequired}}{{#optionalVars}}@{{{name}}}, @{{{name}}}_present{{^-last}}, {{/-last}}{{/optionalVars}})
+    def_equals_and_hash({{#requiredVars}}@{{{name}}}{{^-last}}, {{/-last}}{{/requiredVars}}{{#hasRequired}}{{#hasOptional}}, {{/hasOptional}}{{/hasRequired}}{{#optionalVars}}@{{{name}}}{{#isNullable}}, @{{{name}}}_present{{/isNullable}}{{^-last}}, {{/-last}}{{/optionalVars}})
   end
