--- a/crystal_client_templates/partial_model_list_invalid_properties.mustache
+++ b/crystal_client_templates/partial_model_list_invalid_properties.mustache
@@ -9,51 +9,57 @@
       {{/isContainer}}
       {{/isEnum}}
       {{^isEnum}}
+      {{#required}}
+      {{^isNullable}}
+      invalid_properties.push("\"{{{name}}}\" is required and cannot be null") if @{{{name}}}.nil?
+      {{/isNullable}}
+      {{/required}}
       {{^allowableValues}}
       {{#hasValidation}}
-      {{#maxLength}}
+      if _{{{name}}} = @{{{name}}}
+        {{#maxLength}}
+        if _{{{name}}}.to_s.size > {{{maxLength}}}
+          invalid_properties.push("invalid value for \"{{{name}}}\", the character length must be smaller than or equal to {{{maxLength}}}.")
+        end
+        {{/maxLength}}
+        {{#minLength}}
 
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size > {{{maxLength}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", the character length must be smaller than or equal to {{{maxLength}}}.")
-      end
-      {{/maxLength}}
-      {{#minLength}}
+        if _{{{name}}}.to_s.size < {{{minLength}}}
+          invalid_properties.push("invalid value for \"{{{name}}}\", the character length must be great than or equal to {{{minLength}}}.")
+        end
+        {{/minLength}}
+        {{#maximum}}
 
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size < {{{minLength}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", the character length must be great than or equal to {{{minLength}}}.")
-      end
-      {{/minLength}}
-      {{#maximum}}
+        if _{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
+          invalid_properties.push("invalid value for \"{{{name}}}\", must be smaller than {{^exclusiveMaximum}}or equal to {{/exclusiveMaximum}}{{{maximum}}}.")
+        end
+        {{/maximum}}
+        {{#minimum}}
 
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", must be smaller than {{^exclusiveMaximum}}or equal to {{/exclusiveMaximum}}{{{maximum}}}.")
-      end
-      {{/maximum}}
-      {{#minimum}}
+        if _{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
+          invalid_properties.push("invalid value for \"{{{name}}}\", must be greater than {{^exclusiveMinimum}}or equal to {{/exclusiveMinimum}}{{{minimum}}}.")
+        end
+        {{/minimum}}
+        {{#pattern}}
 
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", must be greater than {{^exclusiveMinimum}}or equal to {{/exclusiveMinimum}}{{{minimum}}}.")
-      end
-      {{/minimum}}
-      {{#pattern}}
+        pattern = {{{pattern}}}
+        if _{{{name}}} !~ pattern
+          invalid_properties.push("invalid value for \"{{{name}}}\", must conform to the pattern #{pattern}.")
+        end
+        {{/pattern}}
+        {{#maxItems}}
 
-      pattern = {{{pattern}}}
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} !~ pattern
-        invalid_properties.push("invalid value for \"{{{name}}}\", must conform to the pattern #{pattern}.")
-      end
-      {{/pattern}}
-      {{#maxItems}}
+        if _{{{name}}}.size > {{{maxItems}}}
+          invalid_properties.push("invalid value for \"{{{name}}}\", number of items must be less than or equal to {{{maxItems}}}."
+        end
+        {{/maxItems}}
+        {{#minItems}}
 
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size > {{{maxItems}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", number of items must be less than or equal to {{{maxItems}}}."
+        if _{{{name}}}.size < {{{minItems}}}
+          invalid_properties.push("invalid value for \"{{{name}}}\", number of items must be greater than or equal to {{{minItems}}}."
+        end
+        {{/minItems}}
       end
-      {{/maxItems}}
-      {{#minItems}}
-
-      if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size < {{{minItems}}}
-        invalid_properties.push("invalid value for \"{{{name}}}\", number of items must be greater than or equal to {{{minItems}}}."
-      end
-      {{/minItems}}
       {{/hasValidation}}
       {{/allowableValues}}
       {{#allowableValues}}
