--- a/crystal_client_templates/partial_model_valid.mustache
+++ b/crystal_client_templates/partial_model_valid.mustache
@@ -7,29 +7,36 @@
       {{/isContainer}}
       {{/isEnum}}
       {{^isEnum}}
+      {{#required}}
+      {{^isNullable}}
+      return false if @{{{name}}}.nil?
+      {{/isNullable}}
+      {{/required}}
       {{^allowableValues}}
       {{#hasValidation}}
+      if _{{{name}}} = @{{{name}}}
       {{#maxLength}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size > {{{maxLength}}}
+        return false if _{{{name}}}.to_s.size > {{{maxLength}}}
       {{/maxLength}}
       {{#minLength}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.to_s.size < {{{minLength}}}
+        return false if _{{{name}}}.to_s.size < {{{minLength}}}
       {{/minLength}}
       {{#maximum}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
+        return false if _{{{name}}} >{{#exclusiveMaximum}}={{/exclusiveMaximum}} {{{maximum}}}
       {{/maximum}}
       {{#minimum}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
+        return false if _{{{name}}} <{{#exclusiveMinimum}}={{/exclusiveMinimum}} {{{minimum}}}
       {{/minimum}}
       {{#pattern}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}} !~ {{{pattern}}}
+        return false if _{{{name}}} !~ {{{pattern}}}
       {{/pattern}}
       {{#maxItems}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size > {{{maxItems}}}
+        return false if _{{{name}}}.size > {{{maxItems}}}
       {{/maxItems}}
       {{#minItems}}
-      return false if {{^required}}!@{{{name}}}.nil? && {{/required}}@{{{name}}}.size < {{{minItems}}}
+        return false if _{{{name}}}.size < {{{minItems}}}
       {{/minItems}}
+      end
       {{/hasValidation}}
       {{/allowableValues}}
       {{#allowableValues}}
