Fully qualify model datatypes when used as properties of another model

--- a/crystal_client_templates/partial_model_generic_property_data_type.mustache
+++ b/crystal_client_templates/partial_model_generic_property_data_type.mustache
@@ -1,1 +1,1 @@
-{{^isEnum}}{{#allowableValues}}{{moduleName}}::{{/allowableValues}}{{/isEnum}}{{{dataType}}}?
+{{^isEnum}}{{#allowableValues}}{{moduleName}}::{{/allowableValues}}{{/isEnum}}{{#isModel}}{{moduleName}}::{{/isModel}}{{{dataType}}}?
