Fully qualify complex properties

--- a/crystal_client_templates/partial_model_list_invalid_properties.mustache
+++ b/crystal_client_templates/partial_model_list_invalid_properties.mustache
@@ -20,7 +20,7 @@
       {{/isModel}}
       {{#isContainer}}
         {{#items.isModel}}
-        # Container {{{name}}} has values of {{moduleName}}::{{{items.dataType}}}
+        # Container {{{name}}} {{containerType}} has values of {{moduleName}}::{{{items.dataType}}}
         {{/items.isModel}}
       {{/isContainer}}
       {{#hasValidation}}
