--- a/crystal_client_templates/partial_model_generic.mustache
+++ b/crystal_client_templates/partial_model_generic.mustache
@@ -4,6 +4,7 @@
   class {{classname}}
     include JSON::Serializable
     include JSON::Serializable::Unmapped
+    include OpenApi::Validatable
     include OpenApi::Json
 
     {{#hasRequired}}
@@ -76,7 +77,7 @@
 
     # Show invalid properties with the reasons. Usually used together with valid?
     # @return Array for valid properties with the reasons
-    def list_invalid_properties
+    def list_invalid_properties : Array(String)
       invalid_properties = Array(String).new
       {{^anyOf}}
 {{#requiredVars}}{{>partial_model_list_invalid_properties}}{{/requiredVars}}{{#optionalVars}}{{>partial_model_list_invalid_properties}}{{/optionalVars}}
@@ -86,7 +87,7 @@
 
     # Check to see if the all the properties in the model are valid
     # @return true if the model is valid
-    def valid?
+    def valid? : Bool
       {{^anyOf}}
 {{#requiredVars}}{{>partial_model_valid}}{{/requiredVars}}{{#optionalVars}}{{>partial_model_valid}}{{/optionalVars}}
       {{/anyOf}}
