--- a/crystal_client_templates/partial_model_list_invalid_properties.mustache
+++ b/crystal_client_templates/partial_model_list_invalid_properties.mustache
@@ -15,25 +15,31 @@
       {{/isNullable}}
       {{/required}}
       {{^allowableValues}}
+      if _{{{name}}} = @{{{name}}}
       {{#isModel}}
-      invalid_properties.concat(@{{{name}}}.as?(OpenApi::Validatable).try &.list_invalid_properties_for("{{{name}}}") || Array(String).new)
+      if __{{{name}}} = _{{{name}}}.as?(OpenApi::Validatable)
+        invalid_properties.concat(__{{{name}}}.list_invalid_properties_for("{{{name}}}"))
+      end
       {{/isModel}}
       {{#isContainer}}
         {{#items.isModel}}
           {{#isArray}}
-      {{{name}}}.try &.each do |item|
-        invalid_properties.concat(item.as?(OpenApi::Validatable).try &.list_invalid_properties_for("{{{name}}}") || Array(String).new)
-      end
+        _{{{name}}}.each do |item|
+          if _item = item.as?(OpenApi::Validatable)
+            invalid_properties.concat(_item.list_invalid_properties_for("{{{name}}}"))
+          end
+        end
           {{/isArray}}
           {{#isMap}}
-      {{{name}}}.try &.each do |_key, value|
-        invalid_properties.concat(value.as?(OpenApi::Validatable).try &.list_invalid_properties_for("{{{name}}}") || Array(String).new)
-      end
+        _{{{name}}}.each do |_key, value|
+          if _value = value.as?(OpenApi::Validatable)
+            invalid_properties.concat(_value.list_invalid_properties_for("{{{name}}}"))
+          end
+        end
           {{/isMap}}
         {{/items.isModel}}
       {{/isContainer}}
       {{#hasValidation}}
-      if _{{{name}}} = @{{{name}}}
         {{#maxLength}}
         if _{{{name}}}.to_s.size > {{{maxLength}}}
           invalid_properties.push("invalid value for \"{{{name}}}\", the character length must be smaller than or equal to {{{maxLength}}}.")
@@ -76,8 +82,8 @@
           invalid_properties.push("invalid value for \"{{{name}}}\", number of items must be greater than or equal to {{{minItems}}}."
         end
         {{/minItems}}
-      end
       {{/hasValidation}}
+      end
       {{/allowableValues}}
       {{#allowableValues}}
 
