--- a/crystal_client_templates/partial_model_generic_property.mustache
+++ b/crystal_client_templates/partial_model_generic_property.mustache
@@ -13,5 +13,5 @@
     {{/isNullable}}
     {{#isEnum}}
 
-    {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}} = EnumValidator.new("{{{name}}}", "{{{dataType}}}", [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}])
+    {{#lambda.uppercase}}enum_validator_for_{{{name}}}{{/lambda.uppercase}} = OpenApi::EnumValidator.new("{{{name}}}", "{{{dataType}}}", [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}])
     {{/isEnum}}
